We (Andrew.M) have changed the the main activity to the MapView. We have played around with overlays, such as the marker over Mexico City. And we have added a smll button as well using RelativeLayout.

--- a/android-native/res/values/strings.xml
+++ b/android-native/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="search">Search</string>
     <string name="question_mark">Q</string>
     <string name="recyclefinder_logo">RecycleFinder Logo</string>
+    <string name="api_key">0pAq1GlThPS_WSZl1CPoCoviuF44l6PGqdKOCPA</string>
 
 </resources>
