--- a/android-native/res/values/strings.xml
+++ b/android-native/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="question_mark">Q</string>
     <string name="recyclefinder_logo">RecycleFinder Logo</string>
     <string name="api_key">0pAq1GlThPS_WSZl1CPoCoviuF44l6PGqdKOCPA</string>
+    <string name="main_title">TEST TITLE</string>
 
 </resources>
